// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FetchBot should render properly 1`] = `
<DocumentFragment>
  <button
    class="ant-btn ant-btn-circle ant-btn-default ant-btn-lg ant-btn-icon-only ant-btn-loading"
    disabled=""
    style="display: block; background-color: rgb(236, 113, 0); position: fixed; right: 30px; bottom: 30px; z-index: 999999; height: 55px; width: 55px;"
    title="Chat with Support"
    type="button"
  >
    <span
      class="ant-btn-loading-icon"
    >
      <span
        aria-label="loading"
        class="anticon anticon-loading anticon-spin"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="loading"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
          />
        </svg>
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`FetchBot should render without button visible 1`] = `
<DocumentFragment>
  <button
    class="ant-btn ant-btn-circle ant-btn-default ant-btn-lg ant-btn-icon-only ant-btn-loading"
    disabled=""
    style="display: none; background-color: rgb(236, 113, 0); position: fixed; right: 30px; bottom: 30px; z-index: 999999; height: 55px; width: 55px;"
    title="Chat with Support"
    type="button"
  >
    <span
      class="ant-btn-loading-icon"
    >
      <span
        aria-label="loading"
        class="anticon anticon-loading anticon-spin"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="loading"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
          />
        </svg>
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`FetchBot should trigger the chat onClick of the floating button and events: after-chatting 1`] = `
<DocumentFragment>
  <button
    ant-click-animating-without-extra-node="false"
    class="ant-btn ant-btn-circle ant-btn-default ant-btn-lg ant-btn-icon-only"
    style="display: block; background-color: rgb(236, 113, 0); position: fixed; right: 30px; bottom: 30px; z-index: 999999; height: 55px; width: 55px;"
    title="Chat with Support"
    type="button"
  >
    <span
      aria-label="customer-service"
      class="anticon anticon-customer-service"
      role="img"
      style="color: white;"
    >
      <svg
        aria-hidden="true"
        data-icon="customer-service"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 128c-212.1 0-384 171.9-384 384v360c0 13.3 10.7 24 24 24h184c35.3 0 64-28.7 64-64V624c0-35.3-28.7-64-64-64H200v-48c0-172.3 139.7-312 312-312s312 139.7 312 312v48H688c-35.3 0-64 28.7-64 64v208c0 35.3 28.7 64 64 64h184c13.3 0 24-10.7 24-24V512c0-212.1-171.9-384-384-384z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`FetchBot should trigger the chat onClick of the floating button and events: after-disabled 1`] = `
<DocumentFragment>
  <button
    ant-click-animating-without-extra-node="false"
    class="ant-btn ant-btn-circle ant-btn-default ant-btn-lg ant-btn-icon-only"
    disabled=""
    style="display: block; background-color: rgb(236, 113, 0); position: fixed; right: 30px; bottom: 30px; z-index: 999999; height: 55px; width: 55px;"
    title="Chat with Support"
    type="button"
  >
    <span
      aria-label="customer-service"
      class="anticon anticon-customer-service"
      role="img"
      style="color: white;"
    >
      <svg
        aria-hidden="true"
        data-icon="customer-service"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 128c-212.1 0-384 171.9-384 384v360c0 13.3 10.7 24 24 24h184c35.3 0 64-28.7 64-64V624c0-35.3-28.7-64-64-64H200v-48c0-172.3 139.7-312 312-312s312 139.7 312 312v48H688c-35.3 0-64 28.7-64 64v208c0 35.3 28.7 64 64 64h184c13.3 0 24-10.7 24-24V512c0-212.1-171.9-384-384-384z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`FetchBot should trigger the chat onClick of the floating button and events: after-error 1`] = `
<DocumentFragment>
  <button
    ant-click-animating-without-extra-node="false"
    class="ant-btn ant-btn-circle ant-btn-default ant-btn-lg ant-btn-icon-only"
    disabled=""
    style="display: block; background-color: rgb(236, 113, 0); position: fixed; right: 30px; bottom: 30px; z-index: 999999; height: 55px; width: 55px;"
    title="Chat with Support"
    type="button"
  >
    <span
      aria-label="customer-service"
      class="anticon anticon-customer-service"
      role="img"
      style="color: white;"
    >
      <svg
        aria-hidden="true"
        data-icon="customer-service"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 128c-212.1 0-384 171.9-384 384v360c0 13.3 10.7 24 24 24h184c35.3 0 64-28.7 64-64V624c0-35.3-28.7-64-64-64H200v-48c0-172.3 139.7-312 312-312s312 139.7 312 312v48H688c-35.3 0-64 28.7-64 64v208c0 35.3 28.7 64 64 64h184c13.3 0 24-10.7 24-24V512c0-212.1-171.9-384-384-384z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`FetchBot should trigger the chat onClick of the floating button and events: after-ready 1`] = `
<DocumentFragment>
  <button
    class="ant-btn ant-btn-circle ant-btn-default ant-btn-lg ant-btn-icon-only"
    style="display: block; background-color: rgb(236, 113, 0); position: fixed; right: 30px; bottom: 30px; z-index: 999999; height: 55px; width: 55px;"
    title="Chat with Support"
    type="button"
  >
    <span
      aria-label="customer-service"
      class="anticon anticon-customer-service"
      role="img"
      style="color: white;"
    >
      <svg
        aria-hidden="true"
        data-icon="customer-service"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 128c-212.1 0-384 171.9-384 384v360c0 13.3 10.7 24 24 24h184c35.3 0 64-28.7 64-64V624c0-35.3-28.7-64-64-64H200v-48c0-172.3 139.7-312 312-312s312 139.7 312 312v48H688c-35.3 0-64 28.7-64 64v208c0 35.3 28.7 64 64 64h184c13.3 0 24-10.7 24-24V512c0-212.1-171.9-384-384-384z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`FetchBot should trigger the chat onClick of the floating button and events: after-start 1`] = `
<DocumentFragment>
  <button
    class="ant-btn ant-btn-circle ant-btn-default ant-btn-lg ant-btn-icon-only ant-btn-loading"
    disabled=""
    style="display: block; background-color: rgb(236, 113, 0); position: fixed; right: 30px; bottom: 30px; z-index: 999999; height: 55px; width: 55px;"
    title="Chat with Support"
    type="button"
  >
    <span
      class="ant-btn-loading-icon"
    >
      <span
        aria-label="loading"
        class="anticon anticon-loading anticon-spin"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="loading"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
          />
        </svg>
      </span>
    </span>
  </button>
</DocumentFragment>
`;
